Small refactorings
Baby steps towards removing some "utility" class libraries that provide
things that are now in the Java standard libraries.

- Use standard library to join, repeat strings
- Use standard library to construct immutable sets, maps, lists
- Change implementation of how we collect program text fragments in
  erlang backend
- Remove unused imports